--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <p class="card-text">Vynikající pokud si často zapomínáte deštník a nechcete být nikdy překvapeni nečekanou přeháňkou.</p>
           
         </div>
-        <button type="button" class="btn btn-lg btn-block">Koupit</button>
+        <button type="button" class="btn btn-lg btn-primary btn-block">Koupit</button>
       </div>
 
       <div id="product2" class="card mb-4 box-shadow">
@@ -40,7 +40,7 @@
           <p class="card-text">Nejlepší způsob jak zaujmout neotřelou módou v ulíčkách kolem Staroměstkého náměstí.</p>
           
         </div>
-        <button type="button" class="btn btn-lg btn-block">Koupit</button>
+        <button type="button" class="btn btn-lg btn-primary btn-block">Koupit</button>
       </div>
 
       <div id="product3" class="card mb-4 box-shadow">
@@ -49,7 +49,7 @@
           <h2 class="card-title">Anatoplavky</h2>
           <p class="card-text">Aby muži na rozpálených plážích kromě vašeho těla obdivovali také vaše nitro.</p>
         </div>
-        <button type="button" class="btn btn-lg btn-block">Koupit</button>
+        <button type="button" class="btn btn-lg btn-primary btn-block">Koupit</button>
       </div>
     </div>
   </div>
