Update podle aktuální výuky

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" sizes="16x16" type="image/png" href="/img/icon-16.png" />
+  <link rel="icon" sizes="128x128" type="image/png" href="/img/icon-128.png" />
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
   <link rel="stylesheet" href="style.css" />
+  <script type="module" src="index.js"></script>
+
   <title>Nekup to</title>
 </head>
+
 <body>
   <div class="container">
     <header>
@@ -19,7 +26,8 @@
 
     <div class="p-5 mx-auto text-center">
       <h1 class="display-4">Nekup to!</h1>
-      <p class="lead">Naše zboží promění vaše nudné, prázdné a marné životy na nikdy nekončící horskou dráhou plnou dramat a neočekávaných dobrodružství.</p>
+      <p class="lead">Naše zboží promění vaše nudné, prázdné a marné životy na nikdy nekončící horskou dráhou plnou
+        dramat a neočekávaných dobrodružství.</p>
     </div>
 
     <div class="card-deck">
@@ -27,8 +35,9 @@
         <img class="card-img-top" src="img/destniklobouk.jpg" alt="Card image cap">
         <div class="card-body">
           <h2 class="card-title">Deštníklobouk</h2>
-          <p class="card-text">Vynikající pokud si často zapomínáte deštník a nechcete být nikdy překvapeni nečekanou přeháňkou.</p>
-          
+          <p class="card-text">Vynikající pokud si často zapomínáte deštník a nechcete být nikdy překvapeni nečekanou
+            přeháňkou.</p>
+
         </div>
         <button type="button" class="btn btn-lg btn-primary btn-block">Koupit</button>
       </div>
@@ -38,7 +47,7 @@
         <div class="card-body">
           <h2 class="card-title">Slepičkabelka</h2>
           <p class="card-text">Nejlepší způsob jak zaujmout neotřelou módou v ulíčkách kolem Staroměstkého náměstí.</p>
-          
+
         </div>
         <button type="button" class="btn btn-lg btn-primary btn-block">Koupit</button>
       </div>
@@ -53,7 +62,6 @@
       </div>
     </div>
   </div>
-
-  <script src="index.js"></script>
 </body>
+
 </html>
