Změněno img na images

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="card-deck">
       <div id="product1" class="card mb-4 box-shadow">
-        <img class="card-img-top" src="img/destniklobouk.jpg" alt="Card image cap">
+        <img class="card-img-top" src="images/destniklobouk.jpg" alt="Card image cap">
         <div class="card-body">
           <h2 class="card-title">Deštníklobouk</h2>
           <p class="card-text">Vynikající pokud si často zapomínáte deštník a nechcete být nikdy překvapeni nečekanou
@@ -43,7 +43,7 @@
       </div>
 
       <div id="product2" class="card mb-4 box-shadow">
-        <img class="card-img-top" src="img/slepickabelka.jpg" alt="Slepičkabelka">
+        <img class="card-img-top" src="images/slepickabelka.jpg" alt="Slepičkabelka">
         <div class="card-body">
           <h2 class="card-title">Slepičkabelka</h2>
           <p class="card-text">Nejlepší způsob jak zaujmout neotřelou módou v ulíčkách kolem Staroměstkého náměstí.</p>
@@ -53,7 +53,7 @@
       </div>
 
       <div id="product3" class="card mb-4 box-shadow">
-        <img class="card-img-top" src="img/anatoplavky.jpg" alt="Anatoplavky">
+        <img class="card-img-top" src="images/anatoplavky.jpg" alt="Anatoplavky">
         <div class="card-body">
           <h2 class="card-title">Anatoplavky</h2>
           <p class="card-text">Aby muži na rozpálených plážích kromě vašeho těla obdivovali také vaše nitro.</p>
